welcome.lessons.welcome.array.array667.Array667.scala.error
array667:4: error: type mismatch;
 found   : Unit
 required: Int
	if(nums(indexOfValue(nums,6))==nums((indexOfValue(nums,6))+1)){
        ^